--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-property-decorator": "^2.9.1",
-    "vuesax": "^4.0.1-alpha.25"
+    "nuxt-property-decorator": "^2.9.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2"
   }
