--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-mq": "^2.0.2",
     "nuxt-property-decorator": "^2.9.1"
   },
   "devDependencies": {
