--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt": "^2.15.7",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-mq": "^2.0.2",
-    "nuxt-property-decorator": "^2.9.1"
+    "nuxt-property-decorator": "^2.9.1",
+    "postcss": "^8.3.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
